# MUZOWNIK_CPP

./: .gitignore  CMakeLists.txt  README.md  opus.txt
src/: geometry_defCodes.h  geometry_def_codes.h  library.cpp  library.h  main.cpp  mlib.cpp  mlib.h  structs.h
src/ON_STAVE_PUTTING/: init_putting.cpp  init_putting.h  putting.cpp  putting.h
src/OPUS_EDITOR/: opusEditor.cpp  opusEditor.h
src/OPUS_EDIT_LOGIC/: opus_edit_logic.cpp  opus_edit_logic.h  opus_editing_utils.cpp  opus_editing_utils.h
src/OPUS_LOADSAVE/: OPUS_loadsave.cpp  OPUS_loadsave.h
src/STRUCTS/: Bar.cpp  Bar.h  Chord.cpp  Chord.h  Note.cpp  Note.h  Opus.cpp  Opus.h
src/STRUCTS_MALLFREE/: structs_mallfree.cpp  structs_mallfree.h
src/WINDOWS/: windows.cpp  windows.h  windowsManager.cpp  windowsManager.h
